[package]
name = "cart-api-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
# Common cart
cart-common = {path = "../common"}
# Clients API
reqwest = {version="0.12", default-features=false}
doli-client-api-rs = {git = "https://github.com/Cyrix126/doli-client-api-rs"}
discounts-client = {git = "https://github.com/Cyrix126/discounts-api-rs"}
# configuration file
get_pass = {git = "https://github.com/Cyrix126/get_pass", features=["combine_with_url"]}
confy = "0.6"
serde = { version = "1", features = ["derive"] }
# Server
tokio = {version="1", default-features=false, features= ["rt-multi-thread", "sync"] }
axum = {version="0.7", default-features= false, features= ["tokio", "http2", "json", "macros"] }
# Logging
tracing = "0.1"
tracing-subscriber = "0.3"
# Error
thiserror = "1.0"
axum_thiserror = "0.1"
anyhow = "1.0"
url = {version="2.5", features=["serde"]}
# Miscs
cfg-if ="1.0"

# DB
diesel = { version = "2.2", features = ["postgres"] }
diesel_migrations = {version="2.2", features=["postgres"]}
deadpool-diesel = {version="0.6", features=["postgres"]}
chrono = "0.4"

[features]
default=[]
